# ternary-thermodynamics

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: lib.rs
